--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,5 +1,5 @@
 1.0.1:
-  - Plugin succefuild install
+  - The plugin was successfully installed
   - create_categories_table.php
   - create_jobs_categories_table.php
   - create_jobs_table.php
